# rest_api_base

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: settings.py
exceptions/: business.py
migrations/: env.py
migrations/versions/: 51cca4cb9ab9_id_to_uuid.py  62042f61f65e_initial.py  753cf383b3a0_initial.py  f4ed422bf152_create_user_table.py
models/: __init__.py  auth.py
services/: auth.py  authentication.py  user.py
web/: dto.py  main.py  router.py
web/controllers/: auth.py
web/middleware/: authorization.py
web/request/: auth.py  validators.py
web/response/: auth.py  pagination.py
