[tool.poetry]
name = "rest-api-base"
version = "0.1.0"
description = ""
authors = ["Diogo Lima"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.8"
environs = "^9.5.0"
pydantic = "^1.10.2"
fastapi = "^0.87.0"
psycopg2 = "^2.9.5"
sentry-sdk = {extras = ["fastapi"], version = "^1.12.1"}
alembic = "^1.10.4"
granian = {extras = ["reload"], version = "^1.6.0"}
fastapi-oauth2 = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
