[tool.poetry]
name = "rest-api-base"
version = "1.0.0"
description = ""
authors = ["Diogo Lima"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
sqlmodel = "^0.0.24"
pydantic = "^2.7.0"
fastapi = "^0.115.12"
psycopg2 = "^2.9.5"
alembic = "^1.10.4"
granian = {extras = ["reload"], version = "^1.6.0"}
fastapi-oauth2 = "^1.2.0"
uvicorn = "^0.31.0"
pydantic-settings = "^2.9.1"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
